<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/ic_logout"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_my_listings"
        android:icon="@drawable/ic_format_list_bulleted"
        android:title="@string/my_listings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="always"/>

</menu>
